--- a/src/UPay.DataAccess/UPay.DataAccess.csproj
+++ b/src/UPay.DataAccess/UPay.DataAccess.csproj
@@ -16,6 +16,7 @@
 
     <ItemGroup>
       <PackageReference Include="EFCore.NamingConventions" Version="7.0.2" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.5" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.4" />
     </ItemGroup>
 
