refactor: A bit of cleanup

--- a/src/UPay.Application/UPay.Application.csproj
+++ b/src/UPay.Application/UPay.Application.csproj
@@ -7,8 +7,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Services\Buyer\Dto\" />
       <Folder Include="Services\IdentityVerification\Dto\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\UPay.DataAccess\UPay.DataAccess.csproj" />
     </ItemGroup>
 
 </Project>
