--- a/src/UPay.Application/UPay.Application.csproj
+++ b/src/UPay.Application/UPay.Application.csproj
@@ -14,4 +14,8 @@
       <ProjectReference Include="..\UPay.DataAccess\UPay.DataAccess.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.31.0" />
+    </ItemGroup>
+
 </Project>
